commit reciente al masters del post

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>aqui vamos hacer un blogpost</h1>
-    <p>este un parrafo inicial</p>
+    <div id="container">
+        <div id="post">
+            <h1>este es el titulo atractivo del post</h1>
+            <p>este es el parrafo de incio donde vamos hacer algo</p>
+        </div>
+    </div>
 </body>
 </html>
