diseño a la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,9 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera
+            Hyperblock
+            <span id="tagline">tu blog de confianza
+            </span>
         </div>
         <div id="post">
             <h1>este es el titulo atractivo del post</h1>
