nuevo parrafo en master

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>este es el titulo atractivo del post</h1>
             <p>este es el parrafo de incio donde vamos hacer algo</p>
+            <p>este es un segundo parrafo donde mostrare mas avances del cambio entre ramas</p>
         </div>
     </div>
 </body>
