--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblock
-            <span id="tagline">tu blog de confianza
+            <span id="tagline">tu blog de maestro
             </span>
         </div>
         <div id="post">
